<resources>
    <string name="app_name">MELI</string>
    <string name="lupita_referencia_buscador">Lupita referencia buscador</string>
    <string name="buscar_en_mercado_libre">Buscar en Mercado Libre</string>
    <string name="referencia_link_de_busqueda">Referencia link de busqueda</string>
    <string name="referencia_busqueda">Referencia busqueda</string>
    <string name="cero_resultados">0 resultados</string>
    <string name="llega_hoy">Llega hoy</string>
    <string name="no_hay_productos">No hay productos</string>
    <string name="imagen_articulo">Imagen articulo</string>
    <string name="envio_gratis">Envío gratis</string>
    <string name="pagina">Página</string>
    <string name="uno">1</string>
    <string name="pasar_de_pagina">Pasar de pagina</string>
    <string name="logo">Logo</string>
    <string name="bienvenido_usuario">¡Bienvenido usuario!</string>
    <string name="buscar_productos">Buscar productos</string>
    <string name="producto">Producto</string>
    <string name="review_star">Review star</string>
    <string name="product_images">Product images</string>
    <string name="stock_disponible">Stock disponible</string>
    <string name="descripcion">Descripción</string>
    <string name="informacion_del_producto">Información del producto</string>
    <string name="informacio_del_vendedor">Información del vendedor</string>
    <string name="preguntas_y_respuestas">Preguntas y respuestas</string>
    <string name="ultimas_respondidas">Últimas respondidas</string>
    <string name="mercadopago">Acepta mercadopago</string>
    <string name="sin_descripcion">El vendedor no escribio ninguna descripcion.</string>
    <string name="p">P</string>
    <string name="r">R</string>
    <string name="no_hay_informacion_del_producto">No hay información del producto.</string>
    <string name="todavia_no_hay_preguntas">Todavía no hay preguntas respondidas.</string>
    <string name="seleccionar_pais">Seleccionar país</string>
    <string name="seleccione_la_region_deseada">Seleccione la región deseada</string>
    <string name="confirmar">Confirmar</string>
    <string name="bandera_pais">Bandera país</string>
    <string name="acerca_de">Acerca de</string>
    <string name="developed_by">Desarrollado por Guido Simón Perre</string>
    <string name="linkedin_link">Linkedin link</string>
    <string name="github_link">Github link</string>
    <string name="youarrive_link">YouArrive link</string>
    <string name="region_actual_seleccionada">Región actual seleccionada</string>
</resources>