<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>
        <variable
            name="model"
            type="com.guidoperre.meli.ui.select_country.SelectCountryViewModel" />
    </data>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/white">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_select_country"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:background="@color/amarillo_300"
            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/cv_top_bar"
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="@font/quicksand_medium"
                    android:text="@string/seleccionar_pais"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:fontFamily="@font/quicksand_medium"
            android:text="@string/seleccione_la_region_deseada"
            android:textColor="@color/gris_900"
            android:textSize="16sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tb_select_country" />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_sites"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginTop="15dp"
            android:layout_marginHorizontal="15dp"
            tools:listitem="@layout/item_country"
            app:layout_constraintBottom_toTopOf="@+id/cl_commit"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <ProgressBar
            android:id="@+id/pb_loading"
            style="?android:attr/progressBarStyleLarge"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:indeterminateTint="@color/amarillo_500"
            android:visibility="invisible"
            app:layout_constraintBottom_toTopOf="@+id/cl_commit"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <View
            android:id="@+id/view3"
            android:layout_width="match_parent"
            android:layout_height="110dp"
            android:background="@drawable/background_shadow"
            app:layout_constraintBottom_toBottomOf="parent" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/cl_commit"
            android:layout_width="match_parent"
            android:layout_height="100dp"
            android:background="@color/white"
            app:layout_constraintBottom_toBottomOf="parent">

            <TextView
                android:id="@+id/tv_commit"
                android:layout_width="150dp"
                android:layout_height="35dp"
                android:background="@drawable/background_button"
                android:backgroundTint="@color/azul_500"
                android:paddingBottom="2dp"
                android:fontFamily="@font/quicksand_medium"
                android:gravity="center"
                android:text="@string/confirmar"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:clickable="true"
                android:focusable="true"
                android:onClick="@{() -> model.updateSite()}"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>